--- a/JS/index.html
+++ b/JS/index.html
@@ -53,15 +53,18 @@
 
 <!-- <div id="id9">div text</div> -->
 
-<!-- <button onclick="console.log('BTN 1 clicked')">Click me 1 time</button>
+<!-- <button onclick="console.log('BTN 1 clicked')">BTN 1</button>
 <button 
-ondblclick="console.log('btn 2 clicked'); alert('btn 2 clicked.....')">Click me 2 times</button>
+ondblclick="console.log('btn 2 clicked'); alert('btn 2 clicked.....')">BTN 2</button>
 <div onmouseover="console.log('inside div')">div tagggg</div> -->
 
-<button>BTN 1</button>
+<!-- <button>BTN 1</button>
 <button>BTN 2</button>
 
-<div></div>
+<div>div tagggg</div> -->
+
+
+<button>Click me !</button>
 
 
     <script src="script.js"></script>
